<resources>
    <string name="app_name">Check List App</string>

    <!-- Menu item drawer -->
    <string name="menu_item_check_list">Check list</string>
    <string name="menu_item_title">Ajuda</string>
    <string name="menu_title_mainly">Menu</string>
    <string name="menu_item_tools">Configurações</string>
    <string name="menu_item_about">Sobre o app</string>
    <string name="menu_item_rate">Avaliar</string>
    <string name="menu_item_share">Compartilhar</string>
    <string name="menu_item_logout">Sair</string>

    <!-- LoginActivity -->
    <string name="msg_signin_success">signInResult:success -> %1$s.</string>
    <string name="msg_signin_fail">signInResult:failed code= %1$s.</string>
    <string name="msg_signin_fail_snack_bar">Não foi possível efetuar login.</string>

    <!-- MainActivity -->
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="msg_logout_success">Logout with success</string>
    <string name="app_store_details">Confira o aplicativo Check List App \n </string>
    <string name="app_store_url">https://play.google.com/store/apps/details?id=com.sgztech.checklist</string>
    <string name="msg_store_app_not_found">Não foi possível abrir a loja de aplicativos.</string>

    <!-- AlertDialogUtil -->
    <string name="dialog_title">Atenção</string>
    <string name="dialog_message_logout">Deseja realmente efetuar o logout?</string>
    <string name="dialog_positive_button">Sim</string>
    <string name="dialog_negative_button">Cancelar</string>
    <string name="dialog_about_app_title">Sobre o app</string>
    <string name="dialog_about_app_message">Aplicativo para criar check lists.\n\n Desenvolvido por Antoni Sganzerla.
    </string>
    <string name="dialog_message_delete_check_list">Deseja excluir o check list?</string>
    <string name="dialog_message_delete_check_item">Deseja excluir item do check list?</string>

    <!-- CheckListFragment -->
    <string name="title_check_list_fragment">Check lists</string>
    <string name="check_list_empty">Você não possui check lists criados</string>
    <string name="dialog_add_check_list_title">Criar check list</string>
    <string name="message_check_list_added">Check list criado com sucesso.</string>

    <!-- CheckItemActivity -->
    <string name="message_check_item_added">Item de check list criado com sucesso.</string>
    <string name="dialog_add_check_item_title">Criar item de check list</string>
    <string name="check_item_list_empty">Você não possui itens de check lists criados</string>

    <!-- dialog_default_add -->
    <string name="tvName">Nome</string>
    <string name="msg_name_required">Informe o nome</string>
    <string name="dialog_save">Salvar</string>

    <!-- CheckListAdapter -->
    <string name="message_delete_item">Deletado com sucesso</string>

    <!-- PreferencesFragment -->
    <string name="title_preferences_fragment">Configurações</string>
    <string name="title_notification">Notificações</string>
    <string name="summary_notification">Receber notificações</string>
    <string name="key_notification">notifications</string>
    <bool name="notification_setting_default">true</bool>

</resources>
