<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_item_check_list"
              android:icon="@android:drawable/ic_menu_slideshow"
              android:title="@string/menu_item_check_list"/>
        <item android:id="@+id/nav_item_tools"
              android:icon="@android:drawable/ic_menu_preferences"
              android:title="@string/menu_item_tools"/>
        <item android:id="@+id/nav_item_logout"
              android:icon="@android:drawable/ic_menu_revert"
              android:title="@string/menu_item_logout"/>
    </group>
    <item android:title="@string/menu_item_title">
        <menu>
            <item android:id="@+id/nav_item_about"
                  android:icon="@android:drawable/ic_menu_info_details"
                  android:title="@string/menu_item_about"/>
        </menu>
    </item>
</menu>